syntax = "proto3";
// dict 字典
package dict;
option go_package = "cloud/service/dict;dict";
import "google/protobuf/timestamp.proto";
import "pagination.proto";

// DictObject 数据对象
message DictObject {
	// @inject_tag: gorm:"primaryKey;autoIncrement;column:id" json:"id"
	optional int64 id = 1; //编号
	// @inject_tag: gorm:"column:sort" json:"sort"
	optional int32 sort = 2; //排序
	// @inject_tag: gorm:"column:label" json:"label"
	optional string label = 3; //标签
	// @inject_tag: gorm:"column:value" json:"value"
	optional string value = 4; //键值
	// @inject_tag: gorm:"column:dict_type" json:"dictType"
	optional string dict_type = 5; //字典类型
	// @inject_tag: gorm:"column:color_type" json:"colorType"
	optional string color_type = 6; //颜色类型
	// @inject_tag: gorm:"column:css_class" json:"cssClass"
	optional string css_class = 7; //CSS样式
	// @inject_tag: gorm:"column:status" json:"status"
	optional int32 status = 8; //状态:0正常/1停用
	// @inject_tag: gorm:"column:remark" json:"remark"
	optional string remark = 9; //备注
	// @inject_tag: gorm:"column:creator" json:"creator"
	optional string creator = 10; //创建人
	// @inject_tag: gorm:"column:create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 11; //创建时间
	// @inject_tag: gorm:"column:updater" json:"updater"
	optional string updater = 12; //更新人
	// @inject_tag: gorm:"column:update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 13; //更新时间
}
// DictTotalResponse 列表数据总量
message DictTotalResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// DictCreateRequest 创建数据请求
message DictCreateRequest {
	DictObject data = 1;
}
// DictCreateResponse 创建数据响应
message DictCreateResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// DictUpdateRequest 更新数据请求
message DictUpdateRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
	DictObject data = 2;
}
// DictUpdateResponse 更新数据响应
message DictUpdateResponse {
	int64 code = 1;
	string msg = 2;
}
// DictDeleteRequest 删除数据请求
message DictDeleteRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
}
// DictDeleteResponse 删除数据响应
message DictDeleteResponse {
	int64 code = 1;
	string msg = 2;
}
// DictRequest 查询单条数据请求
message DictRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
}
// DictResponse 查询单条数据响应
message DictResponse {
	int64 code = 1;
	string msg = 2;
	DictObject data = 3;
}
// DictListRequest 列表数据
message DictListRequest {
	
	// @inject_tag: db:"dict_type" json:"dictType"
	optional string dict_type = 1; // 字典类型
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 2; // 状态:0正常/1停用

	// @inject_tag: json:"pagination"
	optional pagination.PaginationRequest pagination = 3; // 分页
}

// DictListResponse 数据响应
message DictListResponse {
	int64 code = 1;
  	string msg = 2;
	repeated DictObject data = 3;
}
// DictListTotalRequest 列表数据
message DictListTotalRequest {
	
	// @inject_tag: db:"dict_type" json:"dictType"
	optional string dict_type = 1; // 字典类型
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 2; // 状态:0正常/1停用

}


// DictService 服务
service DictService{
	rpc DictCreate(DictCreateRequest) returns (DictCreateResponse);
	rpc DictUpdate(DictUpdateRequest) returns (DictUpdateResponse);
	rpc DictDelete(DictDeleteRequest) returns (DictDeleteResponse);
	rpc Dict(DictRequest) returns (DictResponse);
	rpc DictList(DictListRequest) returns (DictListResponse);
	rpc DictListTotal(DictListTotalRequest) returns (DictTotalResponse);
}