syntax = "proto3";
// sys_dict_type 字典类型
package dict;
option go_package = "cloud/service/sys/dict;dict";
import "google/protobuf/timestamp.proto";
import "pagination.proto";

// SysDictTypeObject 数据对象
message SysDictTypeObject {
	// @inject_tag: gorm:"primaryKey;autoIncrement;column:id" json:"id"
	optional int64 id = 1; //编号
	// @inject_tag: gorm:"column:name" json:"name"
	optional string name = 2; //字典名称
	// @inject_tag: gorm:"column:type" json:"type"
	optional string type = 3; //字典类型
	// @inject_tag: gorm:"column:status" json:"status"
	optional int32 status = 4; //状态:0正常/1停用
	// @inject_tag: gorm:"column:remark" json:"remark"
	optional string remark = 5; //备注
	// @inject_tag: gorm:"column:creator" json:"creator"
	optional string creator = 6; //创建人
	// @inject_tag: gorm:"column:create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 7; //创建时间
	// @inject_tag: gorm:"column:updater" json:"updater"
	optional string updater = 8; //更新人
	// @inject_tag: gorm:"column:update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 9; //更新时间
}
// SysDictTypeTotalResponse 列表数据总量
message SysDictTypeTotalResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SysDictTypeCreateRequest 创建数据请求
message SysDictTypeCreateRequest {
	SysDictTypeObject data = 1;
}
// SysDictTypeCreateResponse 创建数据响应
message SysDictTypeCreateResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SysDictTypeUpdateRequest 更新数据请求
message SysDictTypeUpdateRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
	SysDictTypeObject data = 2;
}
// SysDictTypeUpdateResponse 更新数据响应
message SysDictTypeUpdateResponse {
	int64 code = 1;
	string msg = 2;
}
// SysDictTypeDeleteRequest 删除数据请求
message SysDictTypeDeleteRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
}
// SysDictTypeDeleteResponse 删除数据响应
message SysDictTypeDeleteResponse {
	int64 code = 1;
	string msg = 2;
}
// SysDictTypeRequest 查询单条数据请求
message SysDictTypeRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
}
// SysDictTypeResponse 查询单条数据响应
message SysDictTypeResponse {
	int64 code = 1;
	string msg = 2;
	SysDictTypeObject data = 3;
}
// SysDictTypeTypeRequest 查询单条数据请求
message SysDictTypeTypeRequest {
	
	// @inject_tag: db:"type" json:"type"
	optional string type = 1; // 字典类型

}
// SysDictTypeTypeResponse 查询单条数据响应
message SysDictTypeTypeResponse {
	int64 code = 1;
	string msg = 2;
	SysDictTypeObject data = 3;
}
// SysDictTypeListRequest 列表数据
message SysDictTypeListRequest {
	
	// @inject_tag: db:"type" json:"type"
	optional string type = 1; // 字典类型
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 2; // 状态:0正常/1停用
	// @inject_tag: db:"name" json:"name"
	optional string name = 3; // 字典名称

	// @inject_tag: json:"pagination"
	optional pagination.PaginationRequest pagination = 4; // 分页
}

// SysDictTypeListResponse 数据响应
message SysDictTypeListResponse {
	int64 code = 1;
  	string msg = 2;
	repeated SysDictTypeObject data = 3;
}
// SysDictTypeListTotalRequest 列表数据
message SysDictTypeListTotalRequest {
	
	// @inject_tag: db:"type" json:"type"
	optional string type = 1; // 字典类型
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 2; // 状态:0正常/1停用
	// @inject_tag: db:"name" json:"name"
	optional string name = 3; // 字典名称

}


// SysDictTypeService 服务
service SysDictTypeService{
	rpc SysDictTypeCreate(SysDictTypeCreateRequest) returns (SysDictTypeCreateResponse);
	rpc SysDictTypeUpdate(SysDictTypeUpdateRequest) returns (SysDictTypeUpdateResponse);
	rpc SysDictTypeDelete(SysDictTypeDeleteRequest) returns (SysDictTypeDeleteResponse);
	rpc SysDictType(SysDictTypeRequest) returns (SysDictTypeResponse);
	rpc SysDictTypeType(SysDictTypeTypeRequest) returns (SysDictTypeTypeResponse);
	rpc SysDictTypeList(SysDictTypeListRequest) returns (SysDictTypeListResponse);
	rpc SysDictTypeListTotal(SysDictTypeListTotalRequest) returns (SysDictTypeTotalResponse);
}